src/test/ui/issues/issue-38381.stderr
error: compilation successful
  --> $DIR/issue-38381.rs:16:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     let _x: fn(&i32) -> <&i32 as Deref>::Target = unimplemented!();
LL | | }
   | |_^

error: aborting due to previous error

